--- a/components/inputs.html
+++ b/components/inputs.html
@@ -5,9 +5,15 @@
         <svg class="icon icon--primary">
             <use xlink:href="images/sprite.svg#wordpress"></use>
         </svg>
-    </span>            <input
+    </span>            
+    <input
         type="text"
         class="input"
         placeholder="Enter domain name here..."
     />
 </div>
+
+<div class="input-group">
+    <input type="text" class="input" placeholder="Enter domain name here..." />
+    <button class="btn btn--accent">Search</button>
+  </div>
