--- a/css/styles.css
+++ b/css/styles.css
@@ -324,70 +324,91 @@
     color: #fff;
   }
   
+.card--primary .badge--primary {
+  background: #126de4;
+}
+
   .card--secondary .badge--secondary {
     background: #02cdf1;
   }
   
   /* Plans */
+.plan {
+  transition: transform .2s ease-out;
+}
+
+.plan__name {
+  color: #fff;
+  margin: 0;
+  font-weight: 500;
+  font-size: 2.4rem;
+}
+
+.plan__price {
+  font-size: 6rem;
+}
+
+.plan__billing-cycle {
+  font-size: 2.4rem;
+  font-weight: 300;
+  opacity: 0.8;
+  margin-right: 1rem;
+}
+
+.plan__description {
+  font-size: 2rem;
+  font-weight: 300;
+  letter-spacing: 1px;
+  display: block;
+}
+
+.plan .list__item {
+  margin-bottom: 2rem;
+}
+
+.plan--popular {
+  transform: scale(1.1);
+}
+
+.plan--popular .card__header {
+  position: relative;
+}
+
+.plan--popular .card__header::before {
+  content: url(../images/popular.svg);
+  width: 40px;
+  display: inline-block;
+  position: absolute;
+  top: -6px;
+  right: 5%;
+}
+
+.plan:hover {
+  transform: scale(1.05);
+}
+
+.plan--popular:hover {
+  transform: scale(1.15);
+}
+
+@media screen and (min-width: 1024px) {
   .plan__name {
-    color: #fff;
-    margin: 0;
-    font-weight: 500;
-    font-size: 2.4rem;
+    font-size: 1.4rem;
   }
-  
+
   .plan__price {
-    font-size: 6rem;
+    font-size: 5rem;
   }
-  
+
   .plan__billing-cycle {
-    font-size: 2.4rem;
-    font-weight: 300;
-    opacity: 0.8;
-    margin-right: 1rem;
+    font-size: 1.6rem;
   }
-  
+
   .plan__description {
-    font-size: 2rem;
-    font-weight: 300;
-    letter-spacing: 1px;
-    display: block;
+    font-size: 1.7rem;
   }
-  
-  .plan .list__item {
-    margin-bottom: 2rem;
-  }
-  
-  .plan--popular .card__header {
-    position: relative;
-  }
-  
-  .plan--popular .card__header::before {
-    content: url(../images/popular.svg);
-    width: 40px;
-    display: inline-block;
-    position: absolute;
-    top: -6px;
-    right: 5%;
-  }
-  
-  @media screen and (min-width: 1024px) {
-    .plan__name {
-      font-size: 1.4rem;
-    }
-  
-    .plan__price {
-      font-size: 5rem;
-    }
-  
-    .plan__billing-cycle {
-      font-size: 1.6rem;
-    }
-  
-    .plan__description {
-      font-size: 1.7rem;
-    }
-  }
+}
+
   /* Media */
   .media {
     display: flex;
@@ -729,4 +750,14 @@
   .block-domain__prices {
     grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
   }
+}
+
+/* Plans Block */
+.block-plans .grid {
+  gap: 8rem 4rem;
+}
+
+.block-plans .card {
+  max-width: 500px;
+  margin: 0 auto;
 }
